src/objects/Data_Mover_Job_Log__c.object
<CustomObject>
    <fields>
        <fullName>Data_Mover_Scheduled_Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Data Mover Scheduled Job</label>
        <referenceTo>Data_Mover_Scheduled_Job__c</referenceTo>
        <relationshipLabel>Data Mover Job Logs</relationshipLabel>
        <relationshipName>Data_Mover_Job_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_Errors__c</fullName>
        <label>Number of Errors</label>
        <summaryForeignKey>Data_Mover_Error_Log__c.Data_Mover_Job_Log__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Processed_Records__c</fullName>
        <label>Number of Processed Records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_DateTime__c</fullName>
        <label>Start DateTime</label>
        <type>DateTime</type>
    </fields>
    <label>Data Mover Job Log</label>
    <nameField>
        <displayFormat>JOB-{0000}</displayFormat>
        <label>Data Mover Job Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Mover Job Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>